--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
     <link rel="stylesheet" href="dist/css/main.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header class="container header">
@@ -38,6 +38,43 @@
     </nav>
   </div>
 </header>
+<section class="slider__wrap">
+  <div class="slider__info">
+    <h1>Launching Soon</h1>
+    <button type="button" name="button">register interest</button>
+  </div>
+  <div class="slider single-item">
+  <div class="">
+    <img src="./src/img/item1.jpg" alt="">
+  </div>
+  <div class="">
+    <img src="./src/img/item1.jpg" alt="">
+  </div>
+  <div class="">
+    <img src="./src/img/item1.jpg" alt="">
+  </div>
+  </div>
+</section>
+<section class="section row">
+<div class="section__image">
+  <img src="./src/img/section.jpg" alt="">
+  <h2>Why use Test</h2>
+</div>
+<div class="section__inner">
+  <div class="section__block">
+    <h4>Tableware</h4>
+    <p class="section__text">Browse exciting products from a selection of quality makers, all in one place</p>
+  </div>
+  <div class="section__block">
+    <h4>Products Just For You</h4>
+    <p class="section__text">Our technology will do all the hard work &  recommend products that fit well with  your customer profile, based on what your competition is doing.</p>
+  </div>
+  <div class="section__block">
+    <h4>Test It In Your Store</h4>
+    <p class="section__text">Our test & return feature will make it easy for you to find that bestseller, delight your customers & keep them coming back for more </p>
+  </div>
+</div>
+</section>
 </body>
     <script src="dist/js/main.js" ></script>
 </html>
