--- a/index.html
+++ b/index.html
@@ -212,25 +212,25 @@
   </div>
 </section>
 <section id="section5" class="section full grey">
-  <div class="section__image wow fadeInLeft animated">
+  <div class="section__image wow fadeInDowm animated">
     <img src="./src/img/section_big_img1.jpg" alt="">
   </div>
   <div class="section__inner">
-    <h4 class="marg wow fadeInLeft animated">About Us</h4>
-    <h3 class="wow fadeInRight animated">We believe that <br> small can be big</h3>
+    <h4 class="marg wow fadeInDowm animated">About Us</h4>
+    <h3 class="wow fadeInUp animated">We believe that <br> small can be big</h3>
     <p class="section__text wow fadeInLeft animated">Sparkinity was born because we believe in innovation.
 Data shows that small stores are better positioned than ever to take on retail giants as consumers  increasingly seek curation and a personalised touch. Agility is a powerful weapon and we seek to empower the agile.
 ​But to fulfil our vision we need to disrupt the age old system of distribution & wholesale. Our founding team has personal experiences & understanding  of the  expenses incurred , time and incredible effort that both buyers  & makers  make  to connect. All because of the need to get a physical glimpse of that  unicorn called the bestseller before risking an order.
 </p>
   </div>
-  <div class="section__image wow fadeInRight animated">
+  <div class="section__image wow fadeInUp animated">
     <img src="./src/img/section_big_img2.jpg" alt="">
   </div>
 </section>
 <section id="section6" class="section slides no-marg">
   <h2 class="marg wow fadeInDown animated">How Test Works</h2>
   <div class="section__inner owl-carousel">
-      <div class="wow fadeInLeft animated section__block person">
+      <div class="wow fadeInDowm animated section__block person">
         <div class="avatar">
           <img src="./src/img/avatar1.jpg" alt="">
         </div>
@@ -246,7 +246,7 @@ Data shows that small stores are better positioned than ever to take on retail g
         <p class="section__text">As a small store we are constantly on our toes to delight our customers and keep them coming back for more. Its a very competitive market and finding unique products that work with our brand values & price architecture is hard. Sparkinity seems like a promising & valuable concep</p>
         <h3>&#10074;&#10074;</h3>
       </div>
-      <div class="wow fadeInRight animated section__block person">
+      <div class="wow fadeInDowm animated section__block person">
         <div class="avatar">
           <img src="./src/img/avatar3.jpg" alt="">
         </div>
@@ -274,12 +274,12 @@ Data shows that small stores are better positioned than ever to take on retail g
   </p>
   <button type="button" name="button" class="wow fadeInUp animated">register interest</button>
 </div>
-<div class="section__image wow fadeInRight animated">
+<div class="section__image wow fadeInDown animated">
   <img src="./src/img/section_big_img3.jpg" alt="">
 </div>
 </section>
 <footer class="footer">
-  <div class="footer__start wow fadeInLeft animated">
+  <div class="footer__start wow fadeInDowm animated">
     <nav class="footer__nav">
       <a href="#" class="footer__link">home</a>
       <a href="#" class="footer__link">about us</a>
@@ -287,7 +287,7 @@ Data shows that small stores are better positioned than ever to take on retail g
     </nav>
     <button type="button" name="button" class="footer__button">contact</button>
   </div>
-  <div class="footer__end wow fadeInRight animated">
+  <div class="footer__end wow fadeInUp animated">
     <span class="footer__logo">test</span>
     <div class="footer__info">
       <a href="#">Terms & Condition</a>
